--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
